# walrus-sui-archival

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  endorlabs-secrets.yml
config/: local_client_config.yaml  local_mainnet_client_config.yaml  local_testnet_client_config.yaml  local_testnet_client_config_sub1.yaml  local_testnet_client_config_sub2.yaml  mainnet_client_config.yaml  mainnet_config.yaml  testnet_client_config.yaml  testnet_config.yaml  testnet_local_config.yaml
contracts/: Move.toml
contracts/sources/: admin.move  archival_blob.move  archival_blob_tests.move  archival_metadata.move  archival_metadata_tests.move
contracts/walrus-sui-archival-metadata/: Move.toml
contracts/walrus-sui-archival-metadata/sources/: metadata.move  metadata_tests.move
crates/blob-bundle/: Cargo.toml
crates/blob-bundle/src/: lib.rs
crates/caching-server/: Cargo.toml
crates/caching-server/src/: lib.rs  main.rs  metrics.rs
crates/in-memory-checkpoint-holder/: Cargo.toml
crates/in-memory-checkpoint-holder/src/: lib.rs
crates/postgres-store/: Cargo.toml
crates/postgres-store/migrations/00000000000001_create_checkpoint_blob_info/: down.sql
crates/postgres-store/migrations/00000000000002_add_blob_size/: down.sql  up.sql
crates/postgres-store/migrations/00000000000002_simplify_checkpoint_index_entry/: down.sql  up.sql
crates/postgres-store/migrations/00000000000003_add_blob_expiration_index/: down.sql  up.sql
crates/postgres-store/src/: connection.rs  lib.rs  models.rs  schema.rs
crates/walrus-common/: Cargo.toml
crates/walrus-common/src/: lib.rs
crates/walrus-sui-archival/: Cargo.toml  build.rs
crates/walrus-sui-archival/migrations/00000000000001_create_checkpoint_blob_info/: up.sql
crates/walrus-sui-archival/proto/: archival.proto
crates/walrus-sui-archival/src/: archival.rs  archival_state.rs  archival_state_snapshot_creator.rs  burn_blobs.rs  checkpoint_blob_builder.rs  checkpoint_blob_extender.rs  checkpoint_blob_publisher.rs  checkpoint_downloader.rs  checkpoint_monitor.rs  clear_metadata_blob_id.rs  config.rs  delete_all_shared_archival_blobs.rs  dump_metadata_blob.rs  extend_shared_blob.rs  get_metadata_blob_id.rs  graphql_checkpoint_downloader.rs  ingestion_service_checkpoint_downloader.rs  injection_service_checkpoint_downloader.rs  inspect_blob.rs  inspect_db.rs  lib.rs  list_blobs.rs  metrics.rs  parse_bcs_checkpoint.rs  remove_metadata_from_db.rs  rest_api.rs  sui_interactive_client.rs  util.rs
crates/walrus-sui-archival/src/postgres/: backfill.rs  connection.rs  mod.rs  models.rs  schema.rs
crates/walrus-sui-archival/test_data/: checkpoint_1.chk
crates/website-front-end/: Cargo.toml
crates/website-front-end/src/: lib.rs  main.rs
docker/walrus-sui-archival/: Dockerfile  build.sh
scripts/: cleanup.sh
website/: README.md  blobs.html  checkpoint.html  index.html  package-lock.json  package.json
website-old/: README.md  blobs.html  checkpoint.html  ws-resources.json
website-old/js/: blobs.js  checkpoint.js  main.js
website/css/: style.css
website/js/: blobs.js  checkpoint.js  config.js  main.js
website/public/: ws-resources.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/blobs/: page.tsx
website/src/app/checkpoint/: page.tsx
website/src/app/tech/: page.tsx
website/src/components/: Modal.tsx
website/src/lib/: api.ts  config.ts  queries.ts  wallet.ts
