[workspace]
default-members = ["crates/walrus-sui-archival"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Your Name <your.email@example.com>"]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }