[workspace]
default-members = ["crates/blob-bundle", "crates/walrus-sui-archival", "crates/caching-server"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Your Name <your.email@example.com>"]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "2.3"
async-trait = "0.1"
axum = "0.8"
bcs = "0.1.6"
bincode = "1.3.3"
blob-bundle = { path = "crates/blob-bundle" }
bytes = "1.5"
in-memory-checkpoint-holder = { path = "crates/in-memory-checkpoint-holder" }
postgres-store = { path = "crates/postgres-store" }
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.3"
humantime-serde = "1.1"
mysten-metrics = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
prometheus = "0.13.4"
prost = "0.13"
prost-types = "0.13"
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
sui-storage = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
thiserror = "2.0.16"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walrus-core = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.39.1" }
walrus-sdk = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.39.1" }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
diesel_migrations = "2.2"
dotenvy = "0.15"
hex = "0.4"