[package]
name = "caching-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "caching-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
clap = { workspace = true, features = ["env"] }
postgres-store.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-storage.workspace = true
sui-types.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
