[package]
name = "walrus-common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
reqwest.workspace = true
serde.workspace = true
sui-sdk.workspace = true
sui-storage.workspace = true
sui-types.workspace = true
tracing.workspace = true
walrus-core.workspace = true
