[package]
name = "walrus-sui-archival"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "walrus-sui-archival"
path = "bin/main.rs"

[dependencies]
anyhow.workspace = true
arrow = "52.2"
async-channel.workspace = true
async-trait.workspace = true
axum = "0.8"
base64 = "0.22"
bcs.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
bincode.workspace = true
blob-bundle.workspace = true
bytes.workspace = true
chrono = "=0.4.39"
clap.workspace = true
const-str = "0.5"
git-version = "0.3.9"
humantime-serde.workspace = true
in-memory-checkpoint-holder.workspace = true
mysten-metrics.workspace = true
parquet = "52.2"
prometheus = "0.13.4"
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json = "1.0.145"
serde_yaml.workspace = true
sui-indexer-alt-framework.workspace = true
sui-sdk.workspace = true
sui-storage.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walrus-core.workspace = true
walrus-sdk.workspace = true
postgres-store.workspace = true
hex.workspace = true
walrus-common.workspace = true

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.0"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
