[package]
name = "website-front-end"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "website-front-end"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["env"] }
postgres-store.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
